# lc3-vm

./: Cargo.toml  README.md
src/: main.rs  vm.rs
