[package]
name = "lc3-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.60"
env_logger = "0.9.0"
log = "0.4.17"
nix = { version = "0.24.2", default-features = false, features = ["term", "poll", "time"] }
